--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends-Indep: libqt5sql5-sqlite (>= 5.6.0~beta+dfsg~),
                      qttools5-dev-tools (>= 5.6.0~beta~)
 Standards-Version: 3.9.8
 Homepage: https://code.qt.io/cgit/qt/qtquickcontrols2.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtquickcontrols2.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtquickcontrols2.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtquickcontrols2.git
 
 Package: libqt5labstemplates5
