Run the tests in Xvfb.

--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,13 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
+               qml-module-qtgraphicaleffects,
+               qml-module-qtquick-window2,
+               qml-module-qttest,
                qtbase5-private-dev (>= 5.6.0~beta+dfsg~),
-               qtdeclarative5-private-dev (>= 5.6.0~beta~)
+               qtdeclarative5-private-dev (>= 5.6.0~beta~),
+               xauth,
+               xvfb
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.6.0~beta+dfsg~),
                      qtbase5-doc-html (>= 5.6.0~beta+dfsg~),
                      qtdeclarative5-doc-html (>= 5.6.0~beta~),
