--- a/debian/rules
+++ b/debian/rules
@@ -28,4 +28,11 @@ override_dh_auto_install-arch:
 override_dh_install:
 	dh_install --fail-missing
 
+override_dh_auto_test-arch:
+	$(MAKE) install -Csrc/imports INSTALL_ROOT=$(CURDIR)/test_root
+	xvfb-run -a -s "-screen 0 1024x768x24 +extension RANDR +extension RENDER +extension GLX" \
+		dh_auto_test --no-parallel -- -Ctests/auto -k \
+		LD_LIBRARY_PATH=$(CURDIR)/lib \
+		QML2_IMPORT_PATH=$(CURDIR)/test_root/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/qml
+
 override_dh_auto_test-indep:
