Major packaging update for the upcoming 5.7.1 release.

--- a/debian/control
+++ b/debian/control
@@ -26,27 +26,25 @@ Homepage: https://code.qt.io/cgit/qt/qtquickcontrols2.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtquickcontrols2.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtquickcontrols2.git
 
-Package: libqt5labstemplates5
+Package: libqt5quickcontrols2-5
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Qt 5 LabsTemplates library
+Description: Qt 5 Quick Controls 2 library
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the Qt 5 LabsTemplates library, which is part of
- Qt Quick Controls 2.
+ This package contains the Qt 5 Quick Controls 2 library.
 
-Package: qtquickcontrols2-5-dev
-Section: libdevel
+Package: libqt5quicktemplates2-5
 Architecture: any
 Multi-Arch: same
-Depends: libqt5labstemplates5 (= ${binary:Version}), ${misc:Depends}
-Description: Qt 5 Quick Controls 2 development files
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 Quick Templates 2 library
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the Qt Quick Controls 2 development files.
+ This package contains the Qt 5 Quick Templates 2 library.
 
 Package: qml-module-qt-labs-calendar
 Architecture: any
@@ -59,27 +57,38 @@ Description: Qt 5 qt.labs.calendar QML module
  This package contains the QML qt.labs.calendar module, which is part of
  Qt Quick Controls 2.
 
-Package: qml-module-qt-labs-controls
+Package: qml-module-qtquick-controls2
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}
-Description: Qt 5 qt.labs.controls QML module
+Description: Qt 5 Qt Quick Controls 2 QML module
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the QML qt.labs.controls module, which is part of
- Qt Quick Controls 2.
+ This package contains the Qt Quick Controls 2 QML module.
 
-Package: qml-module-qt-labs-templates
+Package: qml-module-qtquick-templates2
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}
-Description: Qt 5 qt.labs.templates QML module
+Description: Qt 5 Qt Quick Templates 2 QML module
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the QML qt.labs.templates module, which is part of
- Qt Quick Controls 2.
+ This package contains the Qt Quick Templates 2 QML module.
+
+Package: qtquickcontrols2-5-dev
+Section: libdevel
+Architecture: any
+Multi-Arch: same
+Depends: libqt5quickcontrols2-5 (= ${binary:Version}),
+         libqt5quicktemplates2-5 (= ${binary:Version}),
+         ${misc:Depends}
+Description: Qt 5 Quick Controls 2 development files
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Qt Quick Controls 2 development files.
 
 Package: qtquickcontrols2-5-doc
 Priority: extra
@@ -102,3 +111,13 @@ Description: Qt 5 Quick Controls 2 HTML documentation
  is its rich set of widgets that provide standard GUI functionality.
  .
  This package contains the Qt Quick Controls 2 documentation in HTML format.
+
+Package: qtquickcontrols2-5-examples
+Architecture: any
+Multi-Arch: same
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 Qt Quick Templates 2 examples
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the examples for Qt Quick Controls 2.
