--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
                qml-module-qtgraphicaleffects,
+               qml-module-qtquick-layouts,
                qml-module-qtquick-window2,
                qml-module-qttest,
                qtbase5-private-dev (>= 5.6.0~beta+dfsg~),
