--- a/debian/control
+++ b/debian/control
@@ -10,18 +10,18 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
-               qml-module-qtgraphicaleffects,
-               qml-module-qtquick-layouts,
-               qml-module-qtquick-window2,
-               qml-module-qttest,
-               qtbase5-private-dev (>= 5.6.0~beta+dfsg~),
-               qtdeclarative5-private-dev (>= 5.6.0~beta~),
+               qml-module-qtgraphicaleffects (>= 5.7.1~),
+               qml-module-qtquick-layouts (>= 5.7.1~),
+               qml-module-qtquick-window2 (>= 5.7.1~),
+               qml-module-qttest (>= 5.7.1~),
+               qtbase5-private-dev (>= 5.7.1+dfsg~),
+               qtdeclarative5-private-dev (>= 5.7.1~),
                xauth,
                xvfb
-Build-Depends-Indep: libqt5sql5-sqlite (>= 5.6.0~beta+dfsg~),
-                     qtbase5-doc-html (>= 5.6.0~beta+dfsg~),
-                     qtdeclarative5-doc-html (>= 5.6.0~beta~),
-                     qttools5-dev-tools (>= 5.6.0~beta~)
+Build-Depends-Indep: libqt5sql5-sqlite (>= 5.7.1+dfsg~),
+                     qtbase5-doc-html (>= 5.7.1+dfsg~),
+                     qtdeclarative5-doc-html (>= 5.7.1~),
+                     qttools5-dev-tools (>= 5.7.1~)
 Standards-Version: 3.9.8
 Homepage: https://code.qt.io/cgit/qt/qtquickcontrols2.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtquickcontrols2.git
