--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,18 @@ Description: Qt 5 qt.labs.calendar QML module
  This package contains the QML qt.labs.calendar module, which is part of
  Qt Quick Controls 2.
 
+Package: qml-module-qt-labs-platform
+Architecture: any
+Multi-Arch: same
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 qt.labs.platform QML module
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the experimental Qt Labs Platform module that provides
+ platform integration: native dialogs, menus and menu bars, and tray icons.
+ It falls back to Qt Widgets when a native implementation is not available.
+
 Package: qml-module-qtquick-controls2
 Architecture: any
 Multi-Arch: same
