--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh $@ --parallel --with pkgkde_symbolshelper
+	dh $@ --parallel --with pkgkde_symbolshelper,qmlcdeps
 
 override_dh_auto_configure:
 	qmake -qt5 QT_BUILD_PARTS+=tests
